--- a/7.4/apache/Dockerfile
+++ b/7.4/apache/Dockerfile
@@ -8,6 +8,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN set -eux; \
     apt-get update && apt-get install -y --no-install-recommends \
         libssh2-1 \
+        unixodbc \
         pwgen \
         msmtp \
         mariadb-client; \
@@ -16,6 +17,7 @@ RUN set -eux; \
     cd /usr/local/etc/php; \
     sed -i -e "s|post_max_size = 8M|post_max_size = 55M|" php.ini; \
     sed -i -e "s|memory_limit = 128M|memory_limit = 1024M|" php.ini; \
+    sed -i -e "s|;max_input_vars = 1000|max_input_vars = 3000|" php.ini; \
     sed -i -e "s|upload_max_filesize = 2M|upload_max_filesize = 50M|" php.ini; \
     sed -i -e "s|;sendmail_path =|sendmail_path = /usr/bin/msmtp -t|" php.ini
 
