--- a/Dockerfile.imagick
+++ b/Dockerfile.imagick
@@ -4,7 +4,7 @@ FROM $PHP_BASE_IMAGE
 
 RUN set -e; \
     apt-get update && apt-get install -y --no-install-recommends \
-        libmagickwand-dev; \
+        imagemagick libmagickwand-dev; \
     apt-get clean; \
     rm -r /var/lib/apt/lists/*; \
     pecl install imagick; \
