--- a/Dockerfile.imagick
+++ b/Dockerfile.imagick
@@ -2,12 +2,17 @@ ARG PHP_BASE_IMAGE=scratch
 
 FROM $PHP_BASE_IMAGE
 
-RUN set -e; \
-    apt-get update && apt-get install -y --no-install-recommends \
-        imagemagick libmagickwand-dev \
-        ghostscript; \
-    apt-get clean; \
-    rm -r /var/lib/apt/lists/*; \
-    pecl install imagick; \
-    docker-php-ext-enable imagick; \
-    sed -i '/disable ghostscript format types/,+6d' /etc/ImageMagick-6/policy.xml
+LABEL maintainer="Yannick Vanhaeren"
+
+SHELL ["/bin/bash", "-exo", "pipefail", "-c"]
+
+ARG DEBIAN_FRONTEND=noninteractive
+ARG PHP_VERSION
+
+RUN apt update && apt install --assume-yes --no-install-recommends \
+        imagemagick \
+        ghostscript \
+        php$PHP_VERSION-imagick && \
+    apt clean && \
+    rm --recursive /var/lib/apt/lists/* && \
+    sed --in-place '/disable ghostscript format types/,+6d' /etc/ImageMagick-6/policy.xml
