--- a/.github/workflows/build-7.4.yaml
+++ b/.github/workflows/build-7.4.yaml
@@ -28,7 +28,7 @@ jobs:
         name: Build and push php 7.4-imagick
         uses: docker/build-push-action@v6
         with:
-          build-args:
+          build-args: |
             PHP_BASE_IMAGE=brabholdsa/php:7.4
             PHP_VERSION=7.4
           file: Dockerfile.imagick
