--- a/.github/workflows/7.4.yaml
+++ b/.github/workflows/7.4.yaml
@@ -17,20 +17,40 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build and push php 7.4
+        name: Build and push brabholdsa/php:7.4-cli
+        uses: docker/build-push-action@v6
+        with:
+          build-args: |
+            PHP_VERSION=7.4
+          target: cli
+          push: true
+          tags: brabholdsa/php:7.4-cli
+      -
+        name: Build and push brabholdsa/php:7.4-cli-imagick
+        uses: docker/build-push-action@v6
+        with:
+          build-args: |
+            PHP_BASE_IMAGE=brabholdsa/php:7.4-cli
+            PHP_VERSION=7.4
+          file: Dockerfile.imagick
+          push: true
+          tags: brabholdsa/php:7.4-cli-imagick
+      -
+        name: Build and push brabholdsa/php:7.4-apache
         uses: docker/build-push-action@v6
         with:
           build-args:
             PHP_VERSION=7.4
+          target: apache
           push: true
-          tags: brabholdsa/php:7.4
+          tags: brabholdsa/php:7.4-apache
       -
-        name: Build and push php 7.4-imagick
+        name: Build and push brabholdsa/php:7.4-apache-imagick
         uses: docker/build-push-action@v6
         with:
           build-args: |
-            PHP_BASE_IMAGE=brabholdsa/php:7.4
+            PHP_BASE_IMAGE=brabholdsa/php:7.4-apache
             PHP_VERSION=7.4
           file: Dockerfile.imagick
           push: true
-          tags: brabholdsa/php:7.4-imagick
+          tags: brabholdsa/php:7.4-apache-imagick
