--- a/.github/workflows/8.1.yaml
+++ b/.github/workflows/8.1.yaml
@@ -7,17 +7,16 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push brabholdsa/php:8.1-cli
+
+      - name: Build and push brabholdsa/php:8.1-cli
         uses: docker/build-push-action@v6
         with:
           build-args: |
@@ -25,8 +24,8 @@ jobs:
           target: cli
           push: true
           tags: brabholdsa/php:8.1-cli
-      -
-        name: Build and push brabholdsa/php:8.1-cli-imagick
+
+      - name: Build and push brabholdsa/php:8.1-cli-imagick
         uses: docker/build-push-action@v6
         with:
           build-args: |
@@ -35,8 +34,8 @@ jobs:
           file: Dockerfile.imagick
           push: true
           tags: brabholdsa/php:8.1-cli-imagick
-      -
-        name: Build and push brabholdsa/php:8.1-apache
+
+      - name: Build and push brabholdsa/php:8.1-apache
         uses: docker/build-push-action@v6
         with:
           build-args:
@@ -44,8 +43,8 @@ jobs:
           target: apache
           push: true
           tags: brabholdsa/php:8.1-apache
-      -
-        name: Build and push brabholdsa/php:8.1-apache-imagick
+
+      - name: Build and push brabholdsa/php:8.1-apache-imagick
         uses: docker/build-push-action@v6
         with:
           build-args: |
